<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".ExploreActivity">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="Search"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="true"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dateRangeBeg"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="Beginning Date (MMDDYYYY)"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="true"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <EditText
        android:id="@+id/dateRangeEnd"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="Ending Date (MMDDYYYY)"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textSize="20dp"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateRangeBeg" />

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Category:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateRangeEnd" />

    <Spinner
        android:id="@+id/sortCategories"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryTitle" />


    <Button
        android:id="@+id/searchButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/mauve"
        android:gravity="center"
        android:onClick="rerouteToResults"
        android:text="Find Events"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortCategories" />




    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mutedBlue"
            app:menu="@menu/navigation_menu" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>