...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="120dp"
        android:src="@drawable/village"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/guidelinePicLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelinePicStart"
         />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="@id/guideline"
        android:gravity="center_horizontal"
        android:background="@color/lightBlue"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@id/guideline"
...
