<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/eventWidget"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:background="@color/mutedBlue"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="Event Name\n\nEvent Sponsor\nCategory\nEvent Date   Event Time\nCost\nDescription"
        android:textAlignment="center"
        android:textStyle="bold" />

</RelativeLayout>

