...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <Button
        android:id="@+id/Guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guest"
        android:textStyle="bold"
        android:backgroundTint="@color/mauve"
        app:layout_constraintBottom_toBottomOf="parent"
...
